# demo_dreamer

./: README.md  main.py  pyproject.toml
config/: config.json
dreamer/: core.py
