[tool.poetry]
name = "demo_dreamer"
version = "0.0.1"
description = "pygame playground"
authors = ["Onirei <occult.remi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
